# utoipa_helper

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: content_type_trait.rs  html_response.rs  json_response.rs  lib.rs  response_description_trait.rs  status_code_trait.rs
tests/: test_basic_example.json  test_schema.json  test_utoipa_helper.rs
utoipa_helper_macro/: Cargo.toml
utoipa_helper_macro/src/: lib.rs
