[package]
name = "utoipa-helper"
version = "0.1.3"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"
description = "Helper Crate For Utoipa Axum Integration."
license = "MIT"
homepage = "https://github.com/ddboline/utoipa_helper"
repository = "https://github.com/ddboline/utoipa_helper"
readme = "README.md"

[dependencies]
axum = "0.8"
serde = "1.0"
utoipa = "5.3"
utoipa-helper-macro = {version="0.1.2", path = "./utoipa_helper_macro"}

[dev-dependencies]
derive_more = {version="2.0", features=["full"]}
rust_decimal = "1.37"
reqwest = {version = "0.12", default-features = false, features=["cookies", "rustls-tls", "gzip", "json"]}
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
utoipa = { version = "5.3", features = ["axum_extras", "yaml", "uuid", "openapi_extensions", "decimal"] }
utoipa-axum = { version = "0.2" }
uuid = {version="1.1", features=["serde", "v4"]}
