[package]
name = "utoipa-helper-macro"
version = "0.1.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="2.0", features=["full", "printing", "extra-traits", "parsing"]}
quote = "1.0"

[lib]
proc-macro = true
