[package]
name = "utoipa-helper-macro"
version = "0.1.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"
description = "Proc Macro for Utopia Helper Crate"
license = "MIT"
homepage = "https://github.com/ddboline/utoipa_helper"
repository = "https://github.com/ddboline/utoipa_helper"

[dependencies]
syn = {version="2.0", features=["full", "printing", "extra-traits", "parsing"]}
quote = "1.0"

[lib]
proc-macro = true
